# dea-lang-l0

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  LICENSE-MIT  MONOREPO.md  Makefile  NOTICE  README-WINDOWS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES  l0-env.sh  l0c  pyproject.toml
compiler/stage1_py/: README.md  l0_analysis.py  l0_ast.py  l0_ast_printer.py  l0_backend.py  l0_c_emitter.py  l0_compilation.py  l0_context.py  l0_diagnostics.py  l0_driver.py  l0_expr_types.py  l0_internal_error.py  l0_lexer.py  l0_locals.py  l0_logger.py  l0_name_resolver.py  l0_parser.py  l0_paths.py  l0_resolve.py  l0_scope_context.py  l0_signatures.py  l0_string_escape.py  l0_symbols.py  l0_types.py  l0c.py  pyproject.toml
compiler/stage1_py/runtime/: l0_runtime.h
compiler/stage1_py/tests/: README.md  conftest.py  test_bare_variant_syntax.py  test_case_statement.py  test_l0_byte_type.py  test_l0_casts.py  test_l0_codegen_advanced.py  test_l0_codegen_basic.py  test_l0_codegen_constructors.py  test_l0_codegen_from_files.py  test_l0_codegen_invalid_casts.py  test_l0_codegen_lvalue_caching.py  test_l0_codegen_semantics.py  test_l0_control_flow.py  test_l0_diagnostic_codes.py  test_l0_driver.py  test_l0_driver_cross_module_runtime.py  test_l0_expr_typechecker_calls.py  test_l0_expr_typechecker_casts_and_nullability.py  test_l0_expr_typechecker_ops.py  test_l0_hash_runtime.py  test_l0_lexer.py  test_l0_name_resolver_module_envs.py  test_l0_parser_control_flow_and_expressions.py  test_l0_parser_errors.py  test_l0_parser_imports_and_types_extended.py  test_l0_parser_types_and_extern.py  test_l0_qualified_names.py  test_l0_string_escape.py  test_l0c_assumptions.py  test_new_enum_variant.py  test_ord_intrinsic.py  test_semantics_matrix.py  test_sizeof_type_alias.py  test_toplet.py  test_with_statement.py
compiler/stage1_py/tests/backend/: test_codegen_advanced.py  test_codegen_basic.py  test_codegen_constructors.py  test_codegen_from_files.py  test_codegen_lvalue_caching.py  test_codegen_semantics.py  test_codegen_type_ordering.py  test_hash_runtime.py  test_stdlib_fs_path_raw_io.py  test_string_runtime.py  test_system_runtime.py  test_trace_arc.py  test_trace_location.py  test_trace_memory.py  test_trace_runtime.py
compiler/stage1_py/tests/c_emitter/: test_c_emitter_cleanup_policy.py
compiler/stage1_py/tests/cli/: test_cli_mode_flags.py  test_docgen_blog.py  test_docgen_cli.py  test_docgen_l0_filter.py  test_docgen_latex.py  (+5 more)
l1/: AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
l1/compiler/stage1_l0/: README.md  run_test_trace.py  run_tests.py  test_runner_common.py
l1/compiler/stage2_l1/: README.md
l1/docs/: README.md  project-status.md  roadmap.md
l1/docs/reference/: architecture.md  c-backend-design.md  design-decisions.md  grammar.md  ownership.md  project-status.md  standard-library.md
l1/examples/: hello.l1
l1/scripts/: build-stage1-l1c.sh  build_stage1_l1c.py  l1c  l1c.cmd
l1/work/: README.md
l1/work/initiatives/: 0001-separate-compilation-and-c-ffi.md
(+1116 files in other folders)
