[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "l0c"
version = "0.1.0"
description = "L0 language compiler"
authors = [{name = "gwz (googlielmo)", email = "googlielmo@gmail.com" }]
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=9.0.2"]

[tool.setuptools]
packages = []
py-modules = [
    "l0c",
    "l0_analysis",
    "l0_ast",
    "l0_ast_printer",
    "l0_codegen",
    "l0_compilation",
    "l0_diagnostics",
    "l0_driver",
    "l0_expr_types",
    "l0_internal_error",
    "l0_lexer",
    "l0_locals",
    "l0_name_resolver",
    "l0_parser",
    "l0_paths",
    "l0_signatures",
    "l0_symbols",
    "l0_types",
]